--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -12,3 +12,20 @@
 .btn:hover {
     background-color: #f55b08;
 }
+
+.clear {
+    display: block;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    border: none;
+    background-color: plum;
+    padding: 8px;
+    border-radius: 5px;
+    font-size: 18px;
+    color: white;
+}
+
+.clear:hover {
+    background-color: #f58ed1;
+}
