--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,8 +1,8 @@
-.navbar{
+.navbar {
     background-color: #1C2B35;
     height: 70px;
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
     align-items: center;
     padding-top: 5px;
     padding-bottom: 5px;
@@ -10,58 +10,73 @@
     padding-right: 140px;
     z-index: 50;
 }
-#side-bar{
+
+#side-bar {
     display: none;
 }
-.navbar img{
+
+.navbar img {
     height: 50px;
 }
 
-.icon{
+.icon {
     color: white;
     font-size: 25px;
     cursor: pointer;
     display: none;
 }
-.nav a{
+
+.nav a {
     text-decoration: none;
     color: white;
     font-size: 18px;
     font-weight: 700;
     margin-right: 20px;
 }
-.nav a:hover{
+
+.nav a:hover {
     color: tomato;
 }
+
 @media screen and (max-width: 992px) {
-    .navbar{
+    .navbar {
         padding-left: 50px;
         padding-right: 50px;
     }
-    #side-bar:checked ~ .icon::before{
+
+    #side-bar:checked~.icon::before {
         content: "\f410";
     }
-    .nav{
-         position: fixed;
-         top: 80px;
-         left: -100%;
-         background-color: #1C2B35;
-         height: 50vh;
-         width: 100%;
-         text-align: center;
-         transition: all 0.4s ease;
-         z-index: 1;
+
+    .nav {
+        position: fixed;
+        top: 80px;
+        left: -100%;
+        background-color: #1C2B35;
+        height: 50vh;
+        width: 100%;
+        text-align: center;
+        transition: all 0.4s ease;
+        z-index: 1;
     }
-    
-    .nav a{
+
+    .nav a {
         display: block;
         margin: 20px 0;
     }
-    .icon{
+
+    .icon {
         display: block;
     }
-    
+
 }
-#side-bar:checked ~ .nav{
+
+#side-bar:checked~.nav {
     left: 0%;
+}
+
+.text {
+    color: white;
+    display: inline;
+    margin-right: 10px;
 }
